fix: overflow

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body {
   letter-spacing: 1.2px;
   background-color: white;
   font-family: "Inter";
+  overflow-x: hidden;
 }
 
 .head-1 {
